--- a/index.html
+++ b/index.html
@@ -4,42 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop The World</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="top-bar">
-            <span>5:38</span>
-            <span>🔔 1</span>
-            <span>📶 5G</span>
-        </div>
-        <div class="navbar">
-            <div class="logo">SHOP THE WORLD</div>
-            <div class="cart-login">
-                <span>🛒 0</span>
-                <a href="#">Login / Register</a>
-            </div>
-        </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Search for Products, Brands and More">
-            <button>🔍</button>
-        </div>
-    </header>
 
-    <section class="categories">
+    <div class="top-bar">
+        <span>by subodh soni</span>
+        <span>🔔 1</span>
+        <span>📶 5G</span>
+    </div>
+
+    <div class="navbar">
+        <div class="logo">SHOP THE WORLD</div>
+        <div class="cart-login">
+            <span>🛒 0</span>
+            <a href="#">Login / Register</a>
+        </div>
+    </div>
+
+    <div class="search-bar">
+        <input type="text" placeholder="Search for Products, Brands and More">
+        <button>🔍</button>
+    </div>
+
+    <div class="categories">
         <div class="category-item">🛍️ Clearance Sale</div>
         <div class="category-item">🆕 New Arrivals</div>
-    </section>
+    </div>
 
-    <section class="banner">
+    <div class="banner">
         <div class="promo">
             <p>PROMO CODE: <strong>STWVALEN14</strong></p>
             <p>Up to <strong>45% OFF</strong></p>
         </div>
         <img src="valentine-banner.jpg" alt="Valentine's Day Sale">
-    </section>
+    </div>
 
-    <section class="products">
+    <div class="products">
         <div class="product">
             <h3>New Arrival</h3>
             <span class="discount">Save 5%</span>
@@ -51,6 +53,13 @@
             <img src="karaoke-machine.jpg" alt="Karaoke Machine">
             <p>Karaoke Machine</p>
         </div>
-    </section>
+    </div>
+
+    <div class="social-icons">
+        <a href="https://youtube.com/@ff_sonar_2.2" target="_blank"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.facebook.com/share/1BHPKorhCo/" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/br_subodh_yt" target="_blank"><i class="fab fa-instagram"></i></a>
+    </div>
+
 </body>
 </html>
